testdata/baselines/reference/submodule/conformance/moduleExportAliasExports.errors.txt
Eloquent.js(2,1): error TS2349: This expression is not callable.
  Type '{}' has no call signatures.
Eloquent.js(5,1): error TS1233: An export declaration can only be used at the top level of a namespace or module.


==== Eloquent.js (2 errors) ====
    // bug #27365, crashes from github.com/marijnh/Eloquent-JavaScript
    (function() {
    ~~~~~~~~~~~~~
    exports.bigOak = 1
    ~~~~~~~~~~~~~~~~~~
    exports.everywhere = 2
    ~~~~~~~~~~~~~~~~~~~~~~
    module.exports = exports
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~
!!! error TS1233: An export declaration can only be used at the top level of a namespace or module.
    })()
    ~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type '{}' has no call signatures.
    